# HI-Spec

./: .gitignore  CLAUDE.md  CMakeLists.txt
.claude/: launch.json
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ComplexBuffer.h  FxModule.h  Graph.cpp  Graph.h  HilbertFilterbank.cpp  HilbertFilterbank.h  SpectralDelay.cpp  SpectralDelay.h  SpectralFilter.cpp  SpectralFilter.h  Vocoder.cpp  Vocoder.h
Source/GUI/: BandDetailStrip.cpp  BandDetailStrip.h  Breadcrumb.cpp  Breadcrumb.h  FilterResponsePlot.cpp  FilterResponsePlot.h  FxModuleCard.cpp  FxModuleCard.h  GooFilterEffect.cpp  GooFilterEffect.h  HeaderBar.cpp  HeaderBar.h  LookAndFeel_HISpec.cpp  LookAndFeel_HISpec.h  PositionChip.cpp  PositionChip.h  SpectralFilterBody.cpp  SpectralFilterBody.h  SpectrumView.cpp  SpectrumView.h  VocoderBody.cpp  VocoderBody.h  VowelPad.cpp  VowelPad.h
Source/GUI/Assets/: chrome_gradient.cpp  chrome_gradient.h
Source/Parameters/: ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h
Source/State/: PresetManager.cpp  PresetManager.h
docs/superpowers/: HANDOFF.md
docs/superpowers/plans/: 2026-04-18-hi-spec-01-engine.md  2026-04-18-hi-spec-02-processor.md  2026-04-18-hi-spec-03-gui.md
docs/superpowers/specs/: 2026-04-18-hi-spec-design.md
installer/mac/: build-installer.sh
installer/windows/: HI-Spec.iss
mockup/: hi-spec-mockup.html
tests/: CMakeLists.txt  GraphWiringTests.cpp  HilbertFilterbankTests.cpp  ParameterLayoutTests.cpp  SpectralDelayTests.cpp  SpectralFilterTests.cpp  StateRoundtripTests.cpp  VocoderTests.cpp  main.cpp  snapshot_band_strip.cpp  snapshot_filter.cpp  snapshot_full_editor.cpp  snapshot_fx_card.cpp  snapshot_lookandfeel.cpp  snapshot_spectrum.cpp  snapshot_vocoder.cpp  test_position_chip.cpp  test_vowel_pad.cpp
